--- a/source/R5T.D0120/R5T.D0120.csproj
+++ b/source/R5T.D0120/R5T.D0120.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Version>1.0.0</Version>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>1591</NoWarn>
@@ -12,4 +12,10 @@
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/SafetyCone/R5T.D0120.git</RepositoryUrl>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\R5T.T0064\source\R5T.T0064\R5T.T0064.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0238\source\R5T.T0238\R5T.T0238.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0247\source\R5T.T0247\R5T.T0247.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0248\source\R5T.T0248\R5T.T0248.csproj" />
+  </ItemGroup>
 </Project>
