--- a/source/R5T.D0120.Construction/R5T.D0120.Construction.csproj
+++ b/source/R5T.D0120.Construction/R5T.D0120.Construction.csproj
@@ -14,6 +14,9 @@
     <RepositoryUrl>https://github.com/SafetyCone/R5T.D0120.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\R5T.D0120\R5T.D0120.csproj" />
   </ItemGroup>
 </Project>
